# distributed-task-queue

./: CMakeLists.txt  README.md
include/: DatabaseManager.h  LoadBalancer.h  Task.h  TaskClient.h  TaskDistributor.h  TaskQueue.h  Worker.h  WorkerNode.h
src/: DatabaseManager.cpp  LoadBalancer.cpp  Task.cpp  TaskClient.cpp  TaskDistributor.cpp  TaskQueue.cpp  Worker.cpp  WorkerNode.cpp  main.cpp
tests/: test_main.cpp
